--- a/Amazon_Reviews_ETL.ipynb
+++ b/Amazon_Reviews_ETL.ipynb
@@ -6,7 +6,7 @@
       "name": "Amazon_Reviews_ETL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMPgxfkQHz02hSObV5sbFVg",
+      "authorship_tag": "ABX9TyMLEJ1sO2e5pPz3jFZ5MgE+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "O3IHAGjU6bdY",
-        "outputId": "1a50a855-5a49-4d76-9e31-33171b42d0db"
+        "outputId": "6cdc2f19-ac6f-44d6-c049-c2488bc8a906"
       },
       "outputs": [
         {
@@ -44,29 +44,30 @@
           "name": "stdout",
           "text": [
             "\r0% [Working]\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
-            "Ign:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:3 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
-            "Hit:4 http://security.ubuntu.com/ubuntu bionic-security InRelease\n",
-            "Hit:5 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu bionic-updates InRelease\n",
-            "Ign:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:8 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Hit:9 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:10 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:11 http://archive.ubuntu.com/ubuntu bionic-backports InRelease\n",
-            "Hit:12 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
+            "\r0% [Connecting to archive.ubuntu.com (91.189.88.142)] [Waiting for headers] [Co\r                                                                               \rGet:2 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Ign:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:4 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
+            "Ign:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:6 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:8 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
             "Hit:13 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Fetched 252 kB in 2s (110 kB/s)\n",
             "Reading package lists... Done\n",
-            "--2021-12-12 23:58:45--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
+            "--2021-12-13 01:02:15--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1002883 (979K) [application/java-archive]\n",
-            "Saving to: ‘postgresql-42.2.16.jar.6’\n",
+            "Saving to: ‘postgresql-42.2.16.jar.14’\n",
             "\n",
             "postgresql-42.2.16. 100%[===================>] 979.38K  --.-KB/s    in 0.08s   \n",
             "\n",
-            "2021-12-12 23:58:45 (11.4 MB/s) - ‘postgresql-42.2.16.jar.6’ saved [1002883/1002883]\n",
+            "2021-12-13 01:02:15 (11.4 MB/s) - ‘postgresql-42.2.16.jar.14’ saved [1002883/1002883]\n",
             "\n",
             "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
             "|marketplace|customer_id|     review_id|product_id|product_parent|       product_title|product_category|star_rating|helpful_votes|total_votes|vine|verified_purchase|     review_headline|         review_body|review_date|\n",
@@ -197,6 +198,25 @@
             "| R9BHBB06QD6TM|          1|            2|          2|   N|                Y|\n",
             "+--------------+-----------+-------------+-----------+----+-----------------+\n",
             "only showing top 20 rows\n",
+            "\n",
+            "+-----------+-----------+\n",
+            "|star_rating|star_rating|\n",
+            "+-----------+-----------+\n",
+            "|          1|     232175|\n",
+            "|          3|     404182|\n",
+            "|          5|    2639935|\n",
+            "|          4|     847792|\n",
+            "|          2|     242832|\n",
+            "|       null|          0|\n",
+            "+-----------+-----------+\n",
+            "\n",
+            "+----+-----------+\n",
+            "|vine|star_rating|\n",
+            "+----+-----------+\n",
+            "|   Y|        895|\n",
+            "|   N|    4366021|\n",
+            "|null|          0|\n",
+            "+----+-----------+\n",
             "\n"
           ]
         }
@@ -252,7 +272,15 @@
         "\n",
         "# Create the vine_table datafarme\n",
         "vine_table_df = df.select([\"review_id\", \"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\n",
-        "vine_table_df.show()\n"
+        "vine_table_df.show()\n",
+        "\n",
+        "# Count star rating = 5\n",
+        "five_star_df = vine_table_df.groupby(\"star_rating\").agg({\"star_rating\":\"count\"}).withColumnRenamed(\"count(star_rating)\", \"star_rating\")\n",
+        "five_star_df.show()\n",
+        "\n",
+        "# Vine filter\n",
+        "vine_reviews_df = vine_table_df.groupby(\"vine\").agg({\"vine\":\"count\"}).withColumnRenamed(\"count(vine)\", \"star_rating\")\n",
+        "vine_reviews_df.show()\n"
       ]
     },
     {
@@ -263,7 +291,7 @@
       "metadata": {
         "id": "pfh9g7Fd_Npa"
       },
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": []
     }
   ]
